--- a/13_Spring_Core_Projects/03_Project-BeanLifeCycle/pom.xml
+++ b/13_Spring_Core_Projects/03_Project-BeanLifeCycle/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>01_Project-SpringCore</artifactId>
+  <artifactId>03_Project-BeanLifeCycle</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>01_Project-SpringCore</name>
+  <name>03_Project-BeanLifeCycle</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -15,11 +15,18 @@
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>6.2.9</version>
     </dependency>
+
   </dependencies>
 </project>
